--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "noyuno <noyuno@users.noreply.github.com>",
   "description": "Raspberry Pi 3 Server Slack Bot",
   "dependencies": {
+    "coffee-script": "^1.12.7",
     "hubot": "^2.19.0",
     "hubot-diagnostics": "0.0.2",
     "hubot-google-images": "^0.2.7",
@@ -17,7 +18,10 @@
     "hubot-rules": "^0.1.2",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.1",
-    "hubot-slack": "^4.4.0"
+    "hubot-slack": "^4.4.0",
+    "node-schedule": "*", 
+    "hubot-gohan": "*", 
+    "weather-yahoo-jp": "*"
   },
   "engines": {
     "node": "0.10.x"
