--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pi",
+  "name": "yukari",
   "version": "0.0.0",
   "private": true,
   "author": "noyuno <noyuno@users.noreply.github.com>",
